--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,20 @@
-body{
-    background:rgb(179, 173, 178);
+ body{
+    background:white;
+}
+.login{
+    background-color: black;
+
 }
 header{
-    background:black;
-    background-image: url("image/cs.jpg");
+    
+    background-image: url("image/200w\ \(7\).webp");
+    background-size:contain;
+   
     background-position: center;
+    font-size: 20px;
     color:white;
-    padding:20px;
-    height:200px;
+    padding:40px;
+    height:400px;
     text-align: center;
 }
 header a{
@@ -18,16 +25,16 @@ header a{
 }
 header .logos a{
     background-image: url("image/sec\ a.jpg");
-    background-size: 100px;
+    background-size: 250px;
     background-repeat: no-repeat;
-    background-position: relative;
+    background-position: center;
   display:inline-block;
   height: 300px;
    text-indent: -99999999px;
-    width:100px;
-
-   
-   
+    width:200px;
+}
+tr button{
+    padding-right: 40px;
 }
 nav ul{
     margin:0;
@@ -41,26 +48,69 @@ nav li{
    
 }
 .sec{
-    background:white;
+    background-image: url("image/MediocreNervousHerculesbeetle.webp");
+    background-size:cover;
+    background-position:relative;
+
     display: flex;
     flex-direction:row ;
-    color:black;
+    color:white;
     padding:20px;
-    height:180px
+    margin:40px;
+    height:400px
     
 }
 
 .sec figure{
     margin:auto;
     text-align: center;
-    width:200px;
+    width:300px;
 }
 .sec figure img{
-    border-radius: 10px;
+    border-radius: 80px;
+    width:300px;
+
+}
+.sec .fig2 img{
+    border-radius: 80px;
     width:200px;
 
 }
+.sec .fig2 img{
+    border-radius: 80px;
+    width:400px;
 
+}
+.sec .fig1 img{
+    border-radius: 40px;
+    width:200px;
+}
+.section{
+    background-image: url("image/200w\ \(6\).webp");
+    background-size:400px;
+    background-repeat: no-repeat;
+
+    display: flex;
+    flex-direction:row ;
+    color:black;
+    margin-top: 40px;
+    padding:20px;
+    height:300px
+    
+}
+.section figure{
+    margin:auto;
+    text-align: center;
+    width:300px;
+}
+.section figure img{
+    margin:auto;
+    text-align: center;
+    width:300px;
+}
+.menu{
+    background-color: aliceblue;
+}
 footer{
     background:rgb(48, 41, 41);
     color:white;
@@ -70,12 +120,12 @@ footer{
     margin-top: 40px;
 }
 section{
-    background-image: url("image/sec\ a.jpg");
+    background:white;
    
     background-size: 100px;
     background-position: center;
     margin-top: 10px;
-    height:100px;
+    height:200px;
 }
 div{
     background-color: black;
